--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "version": "1.5.7",
   "main": "./build/index.js",
   "module": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nikitasystango/react-phone-country-input"
+},
   "dependencies": {
     "@babel/plugin-syntax-jsx": "^7.14.5",
     "@babel/polyfill": "^7.12.1",
